# ac-decomp

./: .gitignore  README.md  build.sh  configure.py  metal_port_reference.md
.github/workflows/: build.yml
config/: README.md
dialog/: README.md  mail.json  prompt.txt
docs/: DECOMP_GUIDE.md  README.md  decomp_basics.md  decomp_me_basics.md  extract_game.md  generating_decomp_context.md  ghidra_basics.md  ghidra_setup.md  m2c_basics.md
include/: README.md  graph.h  m_collision_bg.h  m_msg_data.h  m_scene.h  m_string_data.h
include/Famicom/: ks_nes_common.h
include/JSystem/JKernel/: JKRExpHeap.h
include/MSL_C/: math.h  printf.h  rand.h
include/PowerPC_EABI_Support/Msl/MSL_C/PPC_EABI/: cmath_gcn.h
include/jaudio_NES/: audiocommon.h  audiostruct.h  driver.h  system.h
include/libc64/: sprintf.h
include/libforest/: gbi_extensions.h
include/libforest/emu64/: emu64.hpp
include/libultra/: gu.h  libultra.h
platform/: CMakeLists.txt  PORTING_STATUS.md  README.md  TECHNICAL_REFERENCE.md  settings.ini.template
platform/include/: _mem.h  types.h
platform/include/MSL_C/: w_math.h
platform/include/MSL_C/MSL_Common/: float.h
platform/include/PR/: abi.h  gbi.h  gs2dex.h  mbi.h
platform/include/card/: __card.h
platform/include/dolphin/: card.h  dvd.h  hw_regs.h  os.h  types.h
platform/include/libc/: ctype.h  stdarg.h  stdio.h  string.h
platform/include/libultra/: libultra.h
platform/include/os/: OSCache.h
platform/include/platform/: compat.h  endian.h  platform.h
platform/ios/: AnimalCrossing.entitlements  Info.plist
platform/macos/: Info.plist
platform/src/audio/: CMakeLists.txt  audio_mixer.cpp  audio_stub_thread.c
platform/src/card/: CMakeLists.txt  card_shim.cpp
platform/src/dsp/: CMakeLists.txt  ai_shim.cpp  dsp_shim.cpp
platform/src/dvd/: CMakeLists.txt  dvd_shim.cpp  gcm_fs.cpp  gcm_fs.h
platform/src/gx/: CMakeLists.txt  emu64_shim.cpp  gx_cull.cpp  gx_displist.cpp  gx_draw_internal.h  gx_fifo.cpp  gx_framebuf.cpp  gx_geometry.cpp  gx_get.cpp  gx_init.cpp  gx_lighting.cpp  gx_pixel.cpp  gx_state.h  gx_tev.cpp  gx_texture.cpp  gx_texture.mm  gx_transform.cpp  gx_vert.cpp  metal_renderer.mm  tev_shader_gen.mm  texture_decode.cpp
platform/src/main/: CMakeLists.txt  bootdata_shim.c  ctors_shim.c  jsys_shim.c  main_apple.mm
platform/src/os/: CMakeLists.txt  alarm_shim.cpp  arena_shim.cpp  malloc_shim.c  message_shim.cpp  os_shim.cpp  rtc_shim.cpp  thread_shim.cpp
platform/src/pad/: CMakeLists.txt  pad_shim.cpp
platform/src/vi/: CMakeLists.txt  vi_shim.cpp  vi_window.mm
platform/toolchains/: ios.cmake  macos.cmake
platform/tools/: fix_kr_prototypes.py  gen_asset_stubs.py
src/: README.md  TwoHeadArena.c  famicom_emu.c  irqmgr.c
src/actor/: ac_airplane.c  ac_airplane_move.c_inc  ac_aprilfool_control.c  ac_arrange_room.c  ac_boat_demo_move.c_inc  ac_haniwa.c  ac_ins_hotaru.c  ac_ins_tonbo.c  ac_museum_insect_genji.c_inc  ac_museum_insect_goki.c_inc  ac_museum_insect_tentou.c_inc
src/actor/npc/: ac_harvest_npc1.c  ac_harvest_npc1.c_inc  ac_npc2_think.c_inc  ac_npc_ctrl.c_inc  ac_npc_curator_move.c_inc  ac_npc_guide2_move.c_inc  ac_npc_guide_move.c_inc  ac_npc_majin2_talk.c_inc  ac_npc_majin3_talk.c_inc  ac_npc_majin4_talk.c_inc  ac_npc_majin_talk.c_inc  ac_npc_mask_cat2_move.c_inc  ac_npc_mask_cat_move.c_inc  ac_npc_needlework_talk.c_inc  ac_npc_p_sel_talk.c_inc  ac_npc_police2_move.c_inc  ac_npc_police_move.c_inc  ac_npc_post_girl.c_inc  ac_npc_post_man_move.c_inc  ac_npc_rcn_guide2_talk.c_inc  ac_npc_rcn_guide_talk.c_inc  ac_npc_restart_talk.c_inc  ac_npc_rtc_talk.c.inc  ac_npc_sendo_move.c_inc  ac_npc_shop_common.c  ac_npc_shop_mastersp_talk.c_inc  ac_npc_soncho_talk.c_inc  ac_npc_station_master_talk.c_inc  ac_npc_talk.c_inc  ac_npc_think.c_inc  ac_npc_totakeke.c  ac_npc_totakeke_talk.c_inc  ac_present_npc_schedule.c_inc  ac_taisou_npc0_talk.c_inc  ac_tukimi_npc0_talk.c_inc  ac_tukimi_npc1_talk.c_inc  ac_turi_npc0_move.c_inc
src/actor/npc/event/: ac_ev_angler_move.c_inc  ac_ev_artist_move.c_inc  ac_ev_broker2_move.c_inc  ac_ev_broker_move.c_inc  ac_ev_carpetPeddler.c_inc  ac_ev_designer_talk.c_inc  ac_ev_dokutu_talk.c_inc  ac_ev_dozaemon_move.c_inc  ac_ev_ghost_schedule.c_inc  ac_ev_ghost_talk.c_inc  ac_ev_gypsy_move.c_inc  ac_ev_kabuPeddler_move.c_inc  ac_ev_majin_move.c_inc  ac_ev_miko_move.c_inc  ac_ev_pumpkin_talk.c_inc  ac_ev_santa_move.c_inc  ac_ev_soncho2_talk.c_inc  ac_ev_soncho_talk.c_inc  ac_ev_speech_soncho_talk.c_inc  ac_ev_turkey.c  ac_ev_yomise_move.c_inc
src/data/npc/model/mdl/: rhn_1.c
src/game/: m_card.c  m_collision_bg_column.c_inc  m_collision_bg_info.c_inc  m_field_info.c  m_field_make.c  m_play.c  m_player_item_net.c_inc  m_player_item_rod.c_inc  m_player_item_windmill.c_inc  m_player_main_broken_axe.c_inc  m_player_main_complete_payment.c_inc  m_player_main_demo_get_golden_item.c_inc  m_player_main_fail_emu.c_inc  m_player_main_get_scoop.c_inc  m_player_main_notice_bee.c_inc  m_player_main_notice_mosquito.c_inc  m_player_main_notice_rod.c_inc  m_player_main_pickup_exchange.c_inc  m_player_main_pull_net.c_inc  m_player_main_refuse_pickup.c_inc  m_quest.c
src/static/: nintendo_hi_0.c
src/static/Famicom/: famicom.cpp  ks_nes_core.cpp  ks_nes_draw.cpp
src/static/assets/: nintendo_hi_0.inc
src/static/dolphin/dvd/: dvd.c
src/static/dolphin/gba/: GBAXfer.c
src/static/jaudio_NES/game/: OSAttention.c_inc  game64.c_inc
src/static/jaudio_NES/internal/: channel.c  driver.c  ja_calc.c  jammain_2.c  memory.c  os.c  rspsim.c  sample.c  system.c  track.c
src/static/libc64/: __osMalloc.c  malloc.c  sleep.c  sprintf.c
src/static/libforest/emu64/: emu64.c
tools/: README.md  dialog_tool.py  gcm.py  project.py
